nav graphical fixes and spacing
Changed color and added spacing under nav bar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 nav {
-  background-color: black;
+  background-color: white;
   display: flex;
   flex-direction: row;
   left: 0;
@@ -36,6 +36,11 @@ nav {
   padding: 0;
   position: fixed;
   top: 0;
+  width: 100%;
+}
+
+.header-background{
+  height:85px;
   width: 100%;
 }
 
